# solver.bak

./: .clang-format  .gitignore  .lgtm.yml  CMakeLists.txt  CMakePresets.json  README.md  README_building.md  README_dependencies.md  build_examples.sh  conanfile.txt
.github/workflows/: ci.yml  codeql-analysis.yml
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
src/: CMakeLists.txt  binary_clause.hpp  constraint.hpp  dimacs_parser.cpp  dimacs_parser.hpp  exhaustive_solver.hpp  main.cpp  utilities.hpp
test/: CMakeLists.txt  constexpr_tests.cpp  test_binary_clause.cpp  test_constraints.hpp  tests.cpp
test/test_files/: trivial_sat.dimacs  trivial_unsat.dimacs
